--- a/Puyo_Stack/Puyo_Stack.vcxproj
+++ b/Puyo_Stack/Puyo_Stack.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Puzzle.cpp" />
+    <ClCompile Include="PuzzlePair.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="SceneMain.cpp" />
   </ItemGroup>
@@ -145,6 +146,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Puzzle.h" />
+    <ClInclude Include="PuzzlePair.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="SceneMain.h" />
     <ClInclude Include="Vec2.h" />
