--- a/Puyo_Stack/Puyo_Stack.vcxproj
+++ b/Puyo_Stack/Puyo_Stack.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Pad.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Puzzle.cpp" />
     <ClCompile Include="PuzzlePair.cpp" />
@@ -144,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Pad.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Puzzle.h" />
     <ClInclude Include="PuzzlePair.h" />
